<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SportStat</string>
    <string name="title_activity_main">SportStat</string>
    <string name="Start_Game_Tab">Start Game</string>
    <string name="Log_Game_Tab">Log Game</string>
    <string name="My_Profile_Tab">My Profile</string>
    <string name="Newsfeed_Tab">SportFeed</string>
    <string name="Leaderboard_Tab">Leaderboard</string>
    <string name="Settings_Tab">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="menu_action_add">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basketball_new_game_button">START</string>
    <string name="title_activity_start_game">StartGameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="Assist_Button">Assist</string>
    <string name="Two_Point_Button">Two-Point</string>
    <string name="Three_Point_Button">Three-Point</string>
    <string name="Done_Button">Done</string>
    <string name="title_activity_sport_logging">Sport Logger</string>
    <string name="title_activity_game_summary">Game Summary</string>
    <string name="shots_attempted_text">Shots attempted:</string>
    <string name="stats_text">\"\"</string>
    <string name="ui_button_save_title">SAVE</string>
    <string name="ui_button_cancel_title">CANCEL</string>

    <string name="dialog_fragment_tag_photo_picker">Photo picker</string>
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="assist_dialog_title">Assists</string>
    <string name="two_points_dialog_title">Two-Points</string>
    <string name="three_points_dialog_title">Three-Points</string>
    <string name="shots_attempted_dialog_title">Shots Attempted</string>
    <string name="comment_dialog_title">Comment</string>
    <string name="comment_hint">How did the game go?</string>
    <string name="dialog_fragment_list_item_tag">dialog_fragment_list_item_tag</string>
    <string name="title_activity_login">SportStat</string>
    <string name="username_hint">username</string>
    <string name="login_prompt">Login or register!</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="sportstat_url">http://sportstat.herokuapp.com/</string>
    <string name="title_activity_friend_view">User Profile</string>
    <string name="ui_profile_name_title">Username:</string>
    <string name="ui_profile_name_hint">Your username here</string>
    <string name="ui_profile_email_title">Email:</string>
    <string name="ui_profile_email_hint">Your Email here</string>
    <string name="ui_profile_phone_title">Phone:</string>
    <string name="ui_profile_phone_hint">Your phone number here</string>
    <string name="ui_profile_gender_title">Gender:</string>
    <string name="ui_profile_gender_female">Female</string>
    <string name="ui_profile_gender_male">Male</string>
    <string name="ui_profile_class_title">Class:</string>
    <string name="ui_profile_class_hint">e.g. 2017</string>
    <string name="ui_profile_major_title">Major:</string>
    <string name="ui_profile_major_hint">Your major here</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="ui_profile_photo_title">Profile photo:</string>
    <string name="ui_button_change_title">Change</string>
    <string name="ui_profile_photo_content_description">Your profile photo</string>
    <string name="ui_profile_photo_picker_title">Select profile image</string>
    <string name="ui_profile_handle_title">Handle:</string>
    <string name="ui_profile_handle_hint">Your nickname here</string>
    <string name="ui_profile_toast_save_text">Saved!</string>
    <string name="ui_profile_toast_cancel_text">Cancelled</string>
    <string name="title_activity_avatar_gallery">Avatars</string>
    <string name="Friend_Tab">Friends</string>
    <string name="friend_search_text">Follow new friends:</string>
    <string name="friend_search_hint">Enter a username to search</string>
    <string name="user_search_button_text">SEARCH</string>
    <string name="current_friend_search_text">Friends you follow:</string>
    <string name="stats_chart_title">Performance Over Time</string>
    <string name="stats_chart_x_label">Entries Since Inception</string>
    <string name="service_label">Tracking Service</string>
    <string name="service_started">Started</string>
    <string name="assistString">ASSISTS: </string>
    <string name="twosName">2-POINTS:</string>
    <string name="sample_num">20</string>
    <string name="threesName">3-POINTS:</string>
    <string name="ui_button_view_title">View User Profile</string>
    <string name="stat_score_text">StatScore:</string>
    <string name="leaderboard_local_text">Friends</string>
    <string name="leaderboard_global_Text">Global</string>
    <string name="leaderboard_global_text">Global</string>
    <string name="switch_friend_tab">Friends</string>
    <string name="switch_global_tab">Global</string>
    <string name="remind_to_log">Log some games!</string>

</resources>
