<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="com.herokuapp.sportstat.sportstat.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/login_prompt"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/username_field"
            android:hint="@string/username_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/login_button"
            android:text="@string/login_button_text"
            android:onClick="attemptLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/register_button"
            android:text="@string/register_button_text"
            android:onClick="attemptRegistration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>
