<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/leaderboard_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/friends_switch_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toStartOf="@+id/leaderboard_switch_id"
            android:text="@string/switch_friend_tab" />


        <Switch
            android:id="@+id/leaderboard_switch_id"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="5dp"
            android:switchMinWidth="80dp"


            android:textOff="@string/leaderboard_local_text"
            android:textOn="@string/leaderboard_global_text" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/leaderboard_switch_id"
            android:text="@string/switch_global_tab" />

    </RelativeLayout>


    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="0dp" />

</LinearLayout>