<!--Initial linear layout was copied from the course notes -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"

    android:layout_height="wrap_content"
    android:orientation="vertical"

    tools:context=".SettingsFragment">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ui_profile_photo_title"></TextView>

        <LinearLayout
            android:id="@+id/inner_lin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_photo_text"
            android:baselineAligned="false">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_margin="0dp"
                android:layout_marginStart="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/ui_profile_photo_content_description"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@drawable/blank_profile">

                <requestFocus />
            </ImageView>

            <Button
                android:id="@+id/btnChangePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:onClick="onChangePhotoClicked"
                android:text="@string/ui_button_change_title"></Button>
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/inner_rel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"

            android:layout_below="@id/inner_lin_layout">

            <TextView
                android:id="@+id/nameFieldTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/ui_profile_name_title"></TextView>

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameFieldTitle"
                android:layout_margin="5dp"

                android:inputType="textCapWords"
                android:singleLine="true"></EditText>

            <TextView
                android:id="@+id/editEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editName"
                android:layout_margin="5dp"
                android:text="@string/ui_profile_email_title"></TextView>


            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editEmailText"
                android:layout_margin="5dp"
                android:hint="@string/ui_profile_email_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"></EditText>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/inner_rel_layout"
            android:layout_centerHorizontal="true"

            >


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical"

                >

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onSettingsSaveClicked"
                    android:text="@string/ui_button_save_title"


                    />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onSettingsCancelClicked"
                    android:text="@string/ui_button_cancel_title"


                    />
            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>
</ScrollView>