<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="5dp"
    tools:context="com.herokuapp.sportstat.sportstat.GameSummaryActivity">


    <LinearLayout
        android:id="@+id/chart"
        android:layout_above="@+id/stats_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"

        tools:ignore="Orientation" >
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_above="@+id/linLayout"
        android:textSize="20sp"
        android:id = "@+id/stats_text_view"
        android:text ="@string/stats_text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:id ="@+id/linLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"

         >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:onClick="onSaveClicked"
            android:text="@string/ui_button_save_title" >
        </Button>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:onClick="onCancelClicked"
            android:text="@string/ui_button_cancel_title" >

        </Button>
    </LinearLayout>


</RelativeLayout>
