<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.herokuapp.sportstat.sportstat.FragmentBasketballGame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.herokuapp.sportstat.sportstat.StartGameActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/new_basketball_game_assist_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:text="@string/Assist_Button"
                android:onClick="onButtonPressed"/>

            <TextView
                android:id="@+id/new_basketball_game_assist_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:text="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/new_basketball_game_two_point_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:text="@string/Two_Point_Button"
                android:onClick="onButtonPressed"/>

            <TextView
                android:id="@+id/new_basketball_game_two_point_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:text="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/new_basketball_game_three_point_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".1"
                android:text="@string/Three_Point_Button"
                android:onClick="onButtonPressed"/>

            <TextView
                android:id="@+id/new_basketball_game_three_point_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".9"
                android:text="0" />

        </LinearLayout>

        <Button
            android:id="@+id/new_basketball_game_done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Done_Button" />

    </LinearLayout>

</FrameLayout>
