<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.herokuapp.sportstat.sportstat.SportLoggingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:id="@+id/logger_layer_top"
        android:orientation="horizontal">



        <Button
            android:id="@+id/new_basketball_game_assist_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:textSize="26sp"
            android:onClick="increaseAssists"
            android:text="@string/Assist_Button" />

        <TextView
            android:id="@+id/new_basketball_game_assist_text_view"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:layout_weight=".6"
            android:text="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:layout_below="@id/logger_layer_top"
        android:id="@+id/logger_layer_middle"
        android:orientation="horizontal">

        <Button
            android:id="@+id/new_basketball_game_two_point_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:textSize="26sp"
            android:onClick="increaseTwoPoints"
            android:text="@string/Two_Point_Button" />

        <TextView
            android:id="@+id/new_basketball_game_two_point_text_view"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:layout_weight=".6"
            android:text="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:layout_below="@+id/logger_layer_middle"
        android:id="@+id/logger_layer_bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/new_basketball_game_three_point_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:textSize="26sp"
            android:onClick="increaseThreePoints"
            android:text="@string/Three_Point_Button" />

        <TextView
            android:id="@+id/new_basketball_game_three_point_text_view"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:textSize="44sp"
            android:layout_weight=".6"
            android:text="0" />

    </LinearLayout>

    <Button
        android:id="@+id/new_basketball_game_done_button"
        android:layout_below="@id/logger_layer_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDoneButtonPressed"
        android:text="@string/Done_Button" />

</LinearLayout>

