<?xml version="1.0" encoding="utf-8"?><!--This class takes its name from and is based on code found here: http://www.androidhive.info/2012/02/android-custom-listview-with-image-and-text/-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="horizontal"
    android:padding="5dip">

    <!--  ListRow Left sied Thumbnail image -->
    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dip"
        android:background="@drawable/image_bg_color"
        android:padding="3dip">

        <ImageView
            android:id="@+id/list_image"
            android:layout_width="50dip"
            android:layout_height="50dip" />
        <!--android:src="@drawable/rihanna"-->


    </LinearLayout>

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@+id/thumbnail"
        android:text="daniel"
        android:textColor="#040404"
        android:textSize="15dip"
        android:textStyle="bold"
        android:typeface="sans" />

    <!-- Title Of Song-->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="Rihanna Love the way lie"
        android:textColor="#040404"
        android:textSize="15dip"
        android:typeface="sans"
        android:layout_alignTop="@+id/nameText"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/assistsBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_toRightOf="@id/thumbnail"
        android:layout_alignTop="@+id/assistsNum"

        android:text="@string/assistString"
        android:textColor="#040404"
        android:textSize="15dip"
        android:typeface="sans" />

    <TextView
        android:id="@+id/assistsNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_num"
        android:textColor="#040404"
        android:textSize="15dip"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_below="@+id/title"
        android:layout_toEndOf="@+id/threesBold" />

    <TextView
        android:id="@+id/twosBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/twosName"
        android:textColor="#040404"
        android:textSize="15dip"
        android:typeface="sans"
        android:layout_alignTop="@+id/threesBold"
        android:layout_toStartOf="@+id/threesNum" />

    <TextView
        android:id="@+id/twosNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_num"
        android:textColor="#040404"
        android:textSize="15dip"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_below="@+id/title"
        android:layout_toEndOf="@+id/assistsBold" />

    <TextView
        android:id="@+id/threesBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/threesName"
        android:textColor="#040404"
        android:textSize="15dip"
        android:typeface="sans"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/threesNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_num"
        android:textColor="#040404"
        android:textSize="15dip"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_below="@+id/title"
        android:layout_toStartOf="@+id/duration" />


    <!-- Rightend Duration -->
    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/title"
        android:layout_marginRight="5dip"
        android:gravity="right"
        android:text="5:45"
        android:textColor="#10bcc9"
        android:textSize="10dip"
        android:textStyle="bold" />

    <!-- Rightend Arrow -->
    <!--<ImageView android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:src="@drawable/arrow"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_centerVertical="true"/>-->

</RelativeLayout>